syntax = "proto3";

option csharp_namespace = "Student.Command.Grpc.Protos";

package student_command;

service StudentCommand{
	rpc CreateStudent (CreateStudentRequest) returns (Response);
	rpc UpdateStudent (UpdateStudentRequest) returns (Response);
	rpc DeleteStudent (DeleteStudentRequest) returns (Response);
}

message CreateStudentRequest{
	string name = 1;
	string phone = 2;
	string address = 3;
	string user_id = 4;
}

message UpdateStudentRequest{
	string id = 1;
	string name = 2;
	string phone = 3;
	string address = 4;
	string user_id = 5;
}
message DeleteStudentRequest {
	string id = 1;
	string user_id = 2;
}

message Response{
	string message = 1;
}